--- a/Glossy.html
+++ b/Glossy.html
@@ -258,7 +258,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Acacia Grey</p>
@@ -276,7 +276,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Armani Light Grey</p>
@@ -294,7 +294,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Benito Gris</p>
@@ -312,7 +312,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Breccia Paradise</p>
@@ -330,7 +330,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Cicilia</p>
@@ -347,7 +347,7 @@
                                     <img src="assets/images/Sparten-800x800/Glossy/Glossy/Niva-Cafe-gris.png" class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Niva Cafe Gris</p>
@@ -364,7 +364,7 @@
                                     <img src="assets/images/Sparten-800x800/Glossy/Glossy/Stony-Bianco.png" class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Stony Bianco</p>
