--- a/Onyx-Design.html
+++ b/Onyx-Design.html
@@ -259,7 +259,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Anty Sky Brown</p>
@@ -277,7 +277,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Balla Onyx</p>
@@ -295,7 +295,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Marmo Onyx Gold</p>
@@ -313,7 +313,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Ocean Gold</p>
@@ -331,7 +331,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Onyx Mango</p>
@@ -349,7 +349,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Sliver Ice</p>
