--- a/RUstic-matt.html
+++ b/RUstic-matt.html
@@ -259,7 +259,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Figo Nero</p>
@@ -277,7 +277,7 @@
                                         class="four-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=800x800" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold four-tiles-heading">Valvet Manatee</p>
