--- a/WL-Matt-2023-Collection.html
+++ b/WL-Matt-2023-Collection.html
@@ -250,7 +250,7 @@
 										class="one-img object-fit-cover" alt="img">
 								</div>
 							</div>
-							<a href="catalogue" class="text-decoration-none">
+							<a href="catalogue?filter=600x1200" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 									<div class="shopping-item-details">
 										<p class="fw-semibold first-tiles-heading">Blended Slate </p>
@@ -268,7 +268,7 @@
 										alt="img">
 								</div>
 							</div>
-							<a href="catalogue" class="text-decoration-none">
+							<a href="catalogue?filter=600x1200" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 									<div class="shopping-item-details">
 										<p class="fw-semibold first-tiles-heading">Cornos Gris </p>
@@ -287,7 +287,7 @@
 										alt="img">
 								</div>
 							</div>
-							<a href="catalogue" class="text-decoration-none">
+							<a href="catalogue?filter=600x1200" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 									<div class="shopping-item-details">
 										<p class="fw-semibold first-tiles-heading">Denim Muddy </p>
@@ -306,7 +306,7 @@
 										alt="img">
 								</div>
 							</div>
-							<a href="catalogue" class="text-decoration-none">
+							<a href="catalogue?filter=600x1200" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 									<div class="shopping-item-details">
 										<p class="fw-semibold first-tiles-heading">Live Stone Marfil </p>
@@ -324,7 +324,7 @@
 											class="one-img object-fit-cover" alt="img">
 									</div>
 								</div>
-								<a href="catalogue" class="text-decoration-none">
+								<a href="catalogue?filter=600x1200" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 										<div class="shopping-item-details">
 											<p class="fw-semibold first-tiles-heading">Massa Anthracite </p>
@@ -342,7 +342,7 @@
 											class="one-img object-fit-cover" alt="img">
 									</div>
 								</div>
-								<a href="catalogue" class="text-decoration-none">
+								<a href="catalogue?filter=600x1200" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 										<div class="shopping-item-details">
 											<p class="fw-semibold first-tiles-heading">Merlin Choco </p>
@@ -361,7 +361,7 @@
 											class="one-img object-fit-cover" alt="img">
 									</div>
 								</div>
-								<a href="catalogue" class="text-decoration-none">
+								<a href="catalogue?filter=600x1200" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 										<div class="shopping-item-details">
 											<p class="fw-semibold first-tiles-heading">Orion Bianco </p>
@@ -380,7 +380,7 @@
 											class="one-img object-fit-cover" alt="img">
 									</div>
 								</div>
-								<a href="catalogue" class="text-decoration-none">
+								<a href="catalogue?filter=600x1200" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 										<div class="shopping-item-details">
 											<p class="fw-semibold first-tiles-heading">Vanilla Nero </p>
