--- a/Wl-Wooden-2023.html
+++ b/Wl-Wooden-2023.html
@@ -150,7 +150,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Batia Wood </p>
@@ -168,7 +168,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Charcoal Wood		</p>
@@ -186,7 +186,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Crosswood Brown </p>
@@ -204,7 +204,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Larix Wood</p>
@@ -222,7 +222,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Mixwood Grey</p>
@@ -240,7 +240,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Tango Beige 	</p>
@@ -258,7 +258,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Touchwood Grey 	</p>
@@ -276,7 +276,7 @@
 												class="one-img object-fit-cover" alt="img">
 										</div>
 									</div>
-									<a href="catalogue" class="text-decoration-none">
+									<a href="catalogue?filter=600x1200" class="text-decoration-none">
 										<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
 											<div class="shopping-item-details">
 												<p class="fw-semibold first-tiles-heading">Venezia Oak Wood Olive 	</p>
