--- a/WL-Collection-Part-04.html
+++ b/WL-Collection-Part-04.html
@@ -266,7 +266,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details" >
                                         <p class="fw-semibold product-title">Memento 2.0</p>
@@ -295,7 +295,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">SX Bathtubs</p>
@@ -324,7 +324,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">NOKEN - TONO</p>
@@ -354,7 +354,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Washbasins</p>
@@ -383,7 +383,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Collaro</p>
@@ -412,7 +412,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Pendant Lamp</p>
@@ -441,7 +441,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Pendant Lamp</p>
@@ -470,7 +470,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Scandal Wall Sconce</p>
@@ -499,7 +499,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Soft Facet</p>
@@ -528,7 +528,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Delírios Armchair</p>
@@ -557,7 +557,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Panthella Portable</p>
@@ -586,7 +586,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -614,7 +614,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -643,7 +643,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -672,7 +672,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -702,7 +702,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -732,7 +732,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -761,7 +761,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Pulpino Olive</p>
@@ -779,7 +779,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Regal Bianco</p>
@@ -797,7 +797,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Regal Porch White</p>
@@ -815,7 +815,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Royal Aqua</p>
@@ -833,7 +833,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Royal Daina Beige</p>
@@ -851,7 +851,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Sisiliya Red</p>
@@ -869,7 +869,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Sky Blue</p>
@@ -887,7 +887,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Star Onyx</p>
@@ -905,7 +905,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Stowo Gris</p>
@@ -923,7 +923,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Sufyan kota</p>
@@ -941,7 +941,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Trastone Grey</p>
@@ -959,7 +959,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Thander Grafito</p>
@@ -977,7 +977,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Thander Natural</p>
@@ -995,7 +995,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Viena Crema</p>
@@ -1013,7 +1013,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Viena Gris</p>
