--- a/Wl-platinum-Collection.html
+++ b/Wl-platinum-Collection.html
@@ -265,7 +265,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details" >
                                         <p class="fw-semibold product-title">Memento 2.0</p>
@@ -294,7 +294,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">SX Bathtubs</p>
@@ -323,7 +323,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">NOKEN - TONO</p>
@@ -353,7 +353,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Washbasins</p>
@@ -382,7 +382,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Collaro</p>
@@ -411,7 +411,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Pendant Lamp</p>
@@ -440,7 +440,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Pendant Lamp</p>
@@ -469,7 +469,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Scandal Wall Sconce</p>
@@ -498,7 +498,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Soft Facet</p>
@@ -527,7 +527,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Delírios Armchair</p>
@@ -556,7 +556,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Panthella Portable</p>
@@ -585,7 +585,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -613,7 +613,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -642,7 +642,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -671,7 +671,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -701,7 +701,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -731,7 +731,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <a href="catalogue" class="text-decoration-none">
+                                <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                     <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
                                         <div class="shopping-item-details">
                                             <p class="fw-semibold product-title">Ralik Modular System</p>
@@ -760,7 +760,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Basil Red</p>
@@ -778,7 +778,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Inalco Azul</p>
@@ -796,7 +796,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Iranian Onyx Rose</p>
@@ -814,7 +814,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Iranian Purple</p>
@@ -832,7 +832,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Jadon Verde</p>
@@ -850,7 +850,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Onyx Vista</p>
@@ -868,7 +868,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Rare Verde</p>
@@ -886,7 +886,7 @@
                                         class="one-img object-fit-cover" alt="img">
                                 </div>
                             </div>
-                            <a href="catalogue" class="text-decoration-none">
+                            <a href="catalogue?filter=600x1200" class="text-decoration-none">
                                 <div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex ">
                                     <div class="shopping-item-details">
                                         <p class="fw-semibold first-tiles-heading">Rio Crema</p>
