--- a/catalogue.html
+++ b/catalogue.html
@@ -153,14 +153,27 @@
 		<section class="section-shop position-relative">
 			<div class="container">
 				<!-- Filter Button Section -->
-				<div class=" mb-4">
-					<button class="btn btn-outline-secondary filter-buttons" onclick="filterImages('all')">All</button> <!-- All Button -->
+				<div class="mb-4">
+					<button class="btn btn-outline-secondary filter-buttons active" onclick="filterImages('all')">All</button>
 					<button class="btn btn-outline-secondary filter-buttons" onclick="filterImages('600x600')">600x600</button>
 					<button class="btn btn-outline-secondary filter-buttons" onclick="filterImages('800x800')">800x800</button>
 					<button class="btn btn-outline-secondary filter-buttons" onclick="filterImages('600x1200')">600x1200</button>
 					<button class="btn btn-outline-secondary filter-buttons" onclick="filterImages('1200x1800')">1200x1800</button>
 				</div>
-		
+
+				<style>
+				.filter-buttons {
+					margin-right: 10px;
+					transition: all 0.3s ease;
+				}
+
+				.filter-buttons.active {
+					background-color: #253b2f;
+					color: white;
+					border-color: #253b2f;
+				}
+				</style>
+
 				<div class="row gx-4 gy-5 gy-lg-70 section-padding-lg" id="product-grid" style="text-transform: uppercase;">
 
 					<!-- ============================================================
@@ -1674,8 +1687,70 @@
 	<script src="customize/presets.js"></script>
 
 	<script>
+		// Function to get URL parameters
+		function getUrlParameter(name) {
+			name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+			var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+			var results = regex.exec(location.search);
+			return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+		}
+
+		// Function to set active filter
+		function setActiveFilter(size) {
+			const buttons = document.querySelectorAll('.filter-buttons');
+			buttons.forEach(button => {
+				if (button.textContent.trim().toLowerCase() === size || 
+					(size === 'all' && button.textContent.trim().toLowerCase() === 'all')) {
+					button.classList.add('active');
+				} else {
+					button.classList.remove('active');
+				}
+			});
+		}
+
+		// Function to filter images
 		function filterImages(size) {
 			const products = document.querySelectorAll('.product');
+			
+			// Update active state of buttons
+			setActiveFilter(size);
+			
+			// Filter products
+			products.forEach(product => {
+				if (size === 'all' || product.getAttribute('data-size') === size) {
+					product.style.display = 'block';
+				} else {
+					product.style.display = 'none';
+				}
+			});
+		}
+
+		// On page load
+		document.addEventListener('DOMContentLoaded', function() {
+			// Get filter from URL parameter
+			const filter = getUrlParameter('filter');
+			if (filter) {
+				filterImages(filter);
+			}
+		});
+	</script>
+
+	<script>
+		function filterImages(size) {
+			const products = document.querySelectorAll('.product');
+			const buttons = document.querySelectorAll('.filter-buttons');
+			
+			// Update active state of buttons
+			buttons.forEach(button => {
+				if (button.textContent.trim().toLowerCase() === size || 
+					(size === 'all' && button.textContent.trim().toLowerCase() === 'all')) {
+					button.classList.add('active');
+				} else {
+					button.classList.remove('active');
+				}
+			});
+			
+			// Filter products
 			products.forEach(product => {
 				if (size === 'all' || product.getAttribute('data-size') === size) {
 					product.style.display = 'block';
